[gd_scene load_steps=11 format=2]

[ext_resource path="res://assets/cellphone_3.png" type="Texture" id=1]
[ext_resource path="res://Script/Celular.gd" type="Script" id=2]
[ext_resource path="res://assets/fundo preto.png" type="Texture" id=3]
[ext_resource path="res://assets/tela_quintal.png" type="Texture" id=4]
[ext_resource path="res://assets/white clock bar.png" type="Texture" id=5]
[ext_resource path="res://assets/Action_button.png" type="Texture" id=6]
[ext_resource path="res://Fonts/Minecraftia-Regular.ttf" type="DynamicFontData" id=7]
[ext_resource path="res://assets/star.png" type="Texture" id=8]

[sub_resource type="DynamicFont" id=1]
size = 10
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=2]
size = 22
font_data = ExtResource( 7 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 2 )

[node name="BackyardBackground" type="Sprite" parent="."]
position = Vector2( 641.25, 358.75 )
scale = Vector2( 0.676163, 0.825028 )
texture = ExtResource( 4 )
__meta__ = {
"_edit_lock_": true
}

[node name="BlackBackground" type="Sprite" parent="."]
position = Vector2( 642, 361.628 )
scale = Vector2( 2.025, 2.0354 )
texture = ExtResource( 3 )
__meta__ = {
"_edit_lock_": true
}

[node name="Cellphone" type="Sprite" parent="."]
position = Vector2( 640, 360 )
scale = Vector2( 0.252182, 0.259687 )
texture = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="Button_Map" type="Button" parent="."]
show_behind_parent = true
margin_left = 538.0
margin_top = 265.0
margin_right = 630.0
margin_bottom = 361.0
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Button_Bank" type="Button" parent="."]
show_behind_parent = true
margin_left = 650.0
margin_top = 261.0
margin_right = 749.0
margin_bottom = 360.0
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Button_Credits" type="Button" parent="."]
show_behind_parent = true
margin_left = 530.0
margin_top = 401.0
margin_right = 628.0
margin_bottom = 497.0
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Button_EduFin" type="Button" parent="."]
show_behind_parent = true
margin_left = 650.0
margin_top = 401.0
margin_right = 747.0
margin_bottom = 496.0
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Button_Volume" type="Button" parent="."]
show_behind_parent = true
margin_left = 574.0
margin_top = 532.0
margin_right = 613.0
margin_bottom = 569.0
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Button_Exit" type="Button" parent="."]
show_behind_parent = true
margin_left = 674.0
margin_top = 532.0
margin_right = 709.0
margin_bottom = 572.0
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Button_exit_left_side" type="Button" parent="Button_Exit"]
show_behind_parent = true
margin_left = -675.0
margin_top = -528.0
margin_right = -185.0
margin_bottom = 200.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button_exit_right" type="Button" parent="Button_Exit"]
show_behind_parent = true
margin_left = 119.0
margin_top = -518.0
margin_right = 609.0
margin_bottom = 200.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button_Cellphone_Bottom" type="Button" parent="."]
show_behind_parent = true
margin_left = 484.0
margin_top = 586.0
margin_right = 794.0
margin_bottom = 723.0
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Button_Cellphone_Top" type="Button" parent="."]
show_behind_parent = true
margin_left = 454.0
margin_top = -3.0
margin_right = 823.0
margin_bottom = 109.0
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="TextureProgress" type="TextureProgress" parent="."]
margin_left = 486.0
margin_top = 144.0
margin_right = 2406.0
margin_bottom = 1224.0
rect_scale = Vector2( 0.1, 0.1 )
value = 100.0
texture_under = ExtResource( 5 )
texture_progress = ExtResource( 5 )
fill_mode = 4
tint_progress = Color( 0.160784, 0.529412, 0.741176, 1 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="ActionButton" type="Sprite" parent="."]
position = Vector2( 584.5, 197.5 )
scale = Vector2( 0.0670926, 0.0664137 )
texture = ExtResource( 6 )
__meta__ = {
"_edit_lock_": true
}

[node name="ActionButton2" type="Sprite" parent="."]
position = Vector2( 584.5, 197.5 )
scale = Vector2( 0.0402556, 0.0398482 )
texture = ExtResource( 6 )
__meta__ = {
"_edit_lock_": true
}

[node name="RichTextLabel" type="RichTextLabel" parent="."]
margin_left = 575.0
margin_top = 192.0
margin_right = 623.0
margin_bottom = 232.0
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_fonts/normal_font = SubResource( 1 )
bbcode_enabled = true
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 702, 194 )
scale = Vector2( 0.0512368, 0.0525015 )
texture = ExtResource( 8 )
__meta__ = {
"_edit_lock_": true
}

[node name="knownledge" type="RichTextLabel" parent="."]
margin_left = 696.0
margin_top = 184.0
margin_right = 736.0
margin_bottom = 254.0
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_fonts/normal_font = SubResource( 2 )
text = "1
"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Button_Map" to="." method="_on_Button_Map_pressed"]
[connection signal="pressed" from="Button_Bank" to="." method="_on_Button_Bank_pressed"]
[connection signal="pressed" from="Button_Credits" to="." method="_on_Button_Credits_pressed"]
[connection signal="pressed" from="Button_EduFin" to="." method="_on_Button_EduFin_pressed"]
[connection signal="pressed" from="Button_Volume" to="." method="_on_Button_Volume_pressed"]
[connection signal="pressed" from="Button_Exit" to="." method="_on_Button_Exit_pressed"]
[connection signal="pressed" from="Button_Exit/Button_exit_left_side" to="." method="_on_Button_exit_left_side_pressed"]
[connection signal="pressed" from="Button_Exit/Button_exit_right" to="." method="_on_Button_exit_right_pressed"]
[connection signal="pressed" from="Button_Cellphone_Bottom" to="." method="_on_Button_Cellphone_Bottom_pressed"]
[connection signal="pressed" from="Button_Cellphone_Top" to="." method="_on_Button_Cellphone_Top_pressed"]
